--- a/legacy.tex
+++ b/legacy.tex
@@ -25,7 +25,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% ARTICLE SETUP
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Legacy Data Confounds Modern Genomics Studies}
+%\title{Legacy Data Confounds Modern Genomics Studies}
+\title{Batch Effects in the 1000 Genomes Project Data Confounds Modern Genomics Studies}
 
 \author[1,2]{Luke Anderson-Trocm\'e}
 \author[1,2]{Mathieu Bourgey}
@@ -52,18 +53,21 @@ Recent reports have identified differences in the mutational spectra across huma
 
 \section{Introduction}
 		
-\subsection{Reference Cohorts}			
+\subsection{Batch Effects in Aging Reference Cohort Data}			
 
 The last 5 years have seen a drastic increase in the amount and quality of human genome sequence data. 
-The International HapMap Project \citep{HapMap2005}, the 1000 Genomes Project \citep{1000GenomesProjectConsortium2010,The1000GenomesProjectConsortium2012}, and the Simons Diversity project \citep{Mallick2016}, for example, have made thousands of genome sequences publicly available for population and medical genetic analyses. 
+Reference cohorts such as the International HapMap Project \citep{HapMap2005}, the 1000 Genomes Project \citep{1000GenomesProjectConsortium2010,The1000GenomesProjectConsortium2012}, and the Simons Diversity project \citep{Mallick2016}, for example, have made thousands of genome sequences publicly available for population and medical genetic analyses. 
 Many more genomes are available indirectly through servers providing imputation services \citep{HapMap2005} or summary statistics for variant frequency estimation \citep{Lek2016}.
 
-Because of the extraordinary value of freely available data, this early data from the 1000 Genomes project (1kGP) is still widely used as a reference panel for imputation, allele frequency estimations and to answer a wide range of medical and evolutionary questions. However, the first sequenced genomes in the 1kGP, for example, were sequenced 10 years ago \citep{VanDijk2014}. Since then, sequencing platforms have rapidly improved. The second phase of the 1kGP implemented multiple technological and analytical improvements over its earlier phases \citep{The1000GenomesProjectConsortium2012}. This led to heterogeneous sample preparations and data quality for many of the samples included in the dataset.
+Because of the extraordinary value of freely available data, this early data from the 1000 Genomes project (1kGP) is still widely used as a reference panel for imputation, allele frequency estimations and to answer a wide range of medical and evolutionary questions. 
+However, the first sequenced genomes in the 1kGP, for example, were sequenced 10 years ago \citep{VanDijk2014}. Since then, sequencing platforms have rapidly improved. 
+The second phase of the 1kGP implemented multiple technological and analytical improvements over its earlier phases \citep{The1000GenomesProjectConsortium2012}. 
+This led to heterogeneous sample preparations and data quality for many of the samples included in the dataset.
 
 Even though it is intuitively clear that such batch effects have the potential to confound analyses, the usefulness and ubiquity of the 1kGP data makes such issues particularly insidious.   This raises the question of whether and how such legacy data should be included in contemporary analyses alongside more recent cohorts. 
 Here we point out how large and previously unreported batch effects in the early phases of the 1kGP that still lead to incorrect genetic conclusions through population genetic analyses and indirect use through prominent imputation servers.  
 
-\subsection{Motivations}
+\subsection{Mutational Signatures}
 
 Some mutagenic processes will affect different DNA motifs. 
 Certain mutagens in tobacco smoke, for example, have been shown to preferentially bind to certain genomic motifs leading to an excess of G to T transversions \citep{Pfeifer2002,Pleasance2010}. 
@@ -76,6 +80,8 @@ In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European
 Strong population enrichments of a mutational signature suggests important genetic or environmental differences in the history of each population \citep{Harris2015a, Harris2017a}. 
 Harris and Pritchard further identified distinct mutational spectra across a range of populations \citep{Harris2017a}, which were further studied in \citep{Aikens2018}
  
+ \subsection{Irreproducibility of a Japanese Mutational Signature}
+ 
  In particular, both studies  identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals.
 This heterogeneity is intriguing because differences in mutational signatures accumulate over many generations.
 A systematic difference among the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
@@ -83,13 +89,6 @@ We therefore decided to follow up on this observation, by using a newly sequence
 
 While we were unable to reproduce the heterogeneity among the Japanese population, we could trace back the source of the discrepancy to a batch effect in the 1kGP data that we were not previously aware of.
 We also found that this batch effect led to spurious results in a additional recent publications as a consequence of biased imputation. 
-
-The results section is organized as follows.
-First, we describe the observed discrepancies within and between studies. We then identify the technical covariates that strongly correlate with the discordant values, and describe the distribution of such covariates across phases and populations of the 1kGP.    
-Next, we identify lists of SNPs from the 1kGP whose validity is highly debatable, and show that major imputation servers impute the dubious SNPs.  
-Even though these SNPs are likely technical artifacts, two recent studies report such SNPs as genome-wide significant or nearly significant hits.   
-Fortunately, the main conclusions of the affected studies remain supported by other data. 
-Yet this begs the question: When should we retire legacy reference data?
 
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/Figure1.jpg}
@@ -108,6 +107,13 @@ The same analysis was performed independently for each of the populations in the
 \end{figure}
 
 			\section{Results}
+The results section is organized as follows.
+First, we describe the observed discrepancies within and between studies. We then identify the technical covariates that strongly correlate with the discordant values, and describe the distribution of such covariates across phases and populations of the 1kGP.    
+Next, we identify lists of SNPs from the 1kGP whose validity is highly debatable, and show that major imputation servers impute the dubious SNPs.  
+Even though these SNPs are likely technical artifacts, two recent studies report such SNPs as genome-wide significant or nearly significant hits.   
+Fortunately, the main conclusions of the affected studies remain supported by other data. 
+Yet this begs the question: When should we retire legacy reference data?			
+			
 	\subsection{A peculiar mutational signature in Japan}			
 	
 Harris and Pritchard reported an excess of a 3-mer *AC${\rightarrow}$*CC mutational pattern in a portion of the Japanese individuals in the 1kGP.\citep{Harris2015a}
@@ -149,9 +155,12 @@ However, the average quality of mapped bases per individual appeared to be the b
 \end{figure}
 
 \subsection{Overlap of significant SNPs}
+%Define the approach before calling a genome wide simple logistic regression analysis
 The GWAS approach similarly identified mapping-quality--associated SNPs in 24 of the 26 populations in the 1kGP.
-Over 3517 variants were independently associated to low quality in at least two populations  (Figure \ref{OverLap}), and 3990 SNPs were statistically significant after a \luke{combined analysis} (taking the sum of the deviations from each population and adjusting the degrees of freedom for the chi-squared test according to the number of populations with a segregating variant), as shown on Figure \ref{Manhattan}.  
-\sgcomment{Look at the frequency distributions of these SNPs in GnomAD}
+Over 3517 variants were independently associated to low quality in at least two populations  (Figure \ref{OverLap}), and 3990 SNPs were statistically significant after a \luke{combined analysis} (taking the sum of the deviations from each population and adjusting the degrees of freedom for the chi-squared test according to the number of populations with a segregating variant), as shown on Figure \ref{Manhattan}.
+%Wanted a test statistic to represent the association across all populations, to do that we summed across the deviations for each population. 
+%
+%\sgcomment{Look at the frequency distributions of these SNPs in GnomAD}
 
 \begin{figure*}
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/SNPOverlap6.jpg}
@@ -279,6 +288,16 @@ The deviations from the null model for each test was used to compute the chi-squ
 To test whether the quality variable is associated with genotype across all populations, we used the sum of the deviances across the populations.
 However, since not all SNPs are present in all populations, when computing the \textit{p}-values for the summed deviations, the degrees of freedom were adjusted to the number of populations tested. 
 
+\subsection{Model Specification}
+
+
+${logit}E(Y_{si}) = \beta_{0}^{(sp)} + \beta_{1}^{(sp)} Q_{i} $
+
+
+for $i = 1,\hdots, n_p$
+
+where ${Q}$ is the average quality of mapped bases, ${i}$ is the individual, ${s}$ is SNP, ${p}$ is the population.
+
 \subsection{Mutation Spectrum}
 We calculated the mutation spectrum of triplets for the list of significant SNPs for the JPT population using a similar method as described in Harris et al. 2017. \citep{Harris2017a}
 We modified the methods as necessary for our purposes, scripts are available \href{https://github.com/LukeAndersonTrocme/QualityPaper}{here}. 
@@ -296,7 +315,9 @@ We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
 
 \bibliography{Legacy.bib}
 
+\clearpage
 \section{Supplementary Figures}
+
 \renewcommand{\thefigure}{S\arabic{figure}}
 \setcounter{figure}{0}   	
 
